server_user/logs/2023-01-26.exception.log
2023-01-26 14:08:57 [DSG] error: uncaughtException: userId is not defined
ReferenceError: userId is not defined
    at Object.<anonymous> (C:\Users\meoro\OneDrive\Desktop\WebProgramming\toPangyo\server_user\routes\user.js:9:24)
    at Module._compile (node:internal/modules/cjs/loader:1126:14)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1180:10)
    at Module.load (node:internal/modules/cjs/loader:1004:32)
    at Function.Module._load (node:internal/modules/cjs/loader:839:12)
    at Module.require (node:internal/modules/cjs/loader:1028:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (C:\Users\meoro\OneDrive\Desktop\WebProgramming\toPangyo\server_user\server.js:35:18)
    at Module._compile (node:internal/modules/cjs/loader:1126:14)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1180:10)
2023-01-26 14:13:34 [DSG] error: uncaughtException: Missing initializer in const declaration
C:\Users\meoro\OneDrive\Desktop\WebProgramming\toPangyo\server_user\routes\user.js:6
const getSpe
      ^^^^^^

SyntaxError: Missing initializer in const declaration
    at Object.compileFunction (node:vm:360:18)
    at wrapSafe (node:internal/modules/cjs/loader:1055:15)
    at Module._compile (node:internal/modules/cjs/loader:1090:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1180:10)
    at Module.load (node:internal/modules/cjs/loader:1004:32)
    at Function.Module._load (node:internal/modules/cjs/loader:839:12)
    at Module.require (node:internal/modules/cjs/loader:1028:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (C:\Users\meoro\OneDrive\Desktop\WebProgramming\toPangyo\server_user\server.js:35:18)
    at Module._compile (node:internal/modules/cjs/loader:1126:14)
2023-01-26 14:16:28 [DSG] error: uncaughtException: Unexpected token '}'
C:\Users\meoro\OneDrive\Desktop\WebProgramming\toPangyo\server_user\controllers\getSpecificUserController.js:8
  } catch (error) {}
  ^

SyntaxError: Unexpected token '}'
    at Object.compileFunction (node:vm:360:18)
    at wrapSafe (node:internal/modules/cjs/loader:1055:15)
    at Module._compile (node:internal/modules/cjs/loader:1090:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1180:10)
    at Module.load (node:internal/modules/cjs/loader:1004:32)
    at Function.Module._load (node:internal/modules/cjs/loader:839:12)
    at Module.require (node:internal/modules/cjs/loader:1028:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (C:\Users\meoro\OneDrive\Desktop\WebProgramming\toPangyo\server_user\routes\user.js:6:35)
    at Module._compile (node:internal/modules/cjs/loader:1126:14)
2023-01-26 14:21:37 [DSG] error: uncaughtException: Route.get() requires a callback function but got a [object Undefined]
Error: Route.get() requires a callback function but got a [object Undefined]
    at Route.<computed> [as get] (C:\Users\meoro\OneDrive\Desktop\WebProgramming\toPangyo\server_user\node_modules\express\lib\router\route.js:211:15)
    at Object.<anonymous> (C:\Users\meoro\OneDrive\Desktop\WebProgramming\toPangyo\server_user\routes\user.js:12:4)
    at Module._compile (node:internal/modules/cjs/loader:1126:14)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1180:10)
    at Module.load (node:internal/modules/cjs/loader:1004:32)
    at Function.Module._load (node:internal/modules/cjs/loader:839:12)
    at Module.require (node:internal/modules/cjs/loader:1028:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (C:\Users\meoro\OneDrive\Desktop\WebProgramming\toPangyo\server_user\server.js:35:18)
    at Module._compile (node:internal/modules/cjs/loader:1126:14)
2023-01-26 21:28:51 [DSG] error: uncaughtException: Identifier 'router' has already been declared
C:\Users\meoro\OneDrive\Desktop\WebProgramming\toPangyo\server_user\routes\user.js:10
router.route("/users").get(verifyJwtToken, getUserController.handleGetUserInfo);
^

SyntaxError: Identifier 'router' has already been declared
    at Object.compileFunction (node:vm:360:18)
    at wrapSafe (node:internal/modules/cjs/loader:1055:15)
    at Module._compile (node:internal/modules/cjs/loader:1090:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1180:10)
    at Module.load (node:internal/modules/cjs/loader:1004:32)
    at Function.Module._load (node:internal/modules/cjs/loader:839:12)
    at Module.require (node:internal/modules/cjs/loader:1028:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (C:\Users\meoro\OneDrive\Desktop\WebProgramming\toPangyo\server_user\server.js:35:18)
    at Module._compile (node:internal/modules/cjs/loader:1126:14)
